<resources>
    <string name="app_name">S Memo</string>
    <string name="smemo">SMemo</string>
    <string name="nomemo">No S Memo</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="recognized_text">Text recognized</string>
    <string name="cancel">Cancel</string>
    <string name="map_cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="saved">Saved</string>
    <string name="deleted">Deleted</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="move">Move</string>
    <string name="move_here">Move here</string>
    <string name="paste_here">Paste here</string>
    <string name="text_first">Text</string>
    <string name="contact_icon">Contact icon</string>
    <string name="homescreen">Home screen wallpaper</string>
    <string name="lockscreen">Lock screen wallpaper</string>
    <string name="widget">Widget</string>
    <string name="set_as_widget">Set as widget</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">Please wait</string>
    <string name="chooser">Select an action</string>
    <string name="share">Share</string>
    <string name="s_planner">S Planner</string>
    <string name="failed">Failed</string>
    <string name="enter_title">Enter title</string>
    <string name="recognize_failed">Failed to recognize. You need to select language. Continue?</string>
    <string name="select_language">Select language</string>
    <string name="recording_failed">Can not recording</string>
    <string name="exceed_memory">Exceed memory.</string>
    <string name="record">Record</string>
    <string name="_continue">Continue</string>
    <string name="password_keyboard_label_symbol_key">\?123</string>
    <string name="password_keyboard_label_alpha_key">ABC</string>
    <string name="password_keyboard_label_alt_key">ALT</string>
    <string name="lockpassword_choose_your_pin_header">Select PIN</string>
    <string name="lockpassword_confirm_your_pin_header">Confirm PIN</string>
    <string name="lockpassword_confirm_pins_dont_match">PIN do not match</string>
    <string name="lockpassword_enter_pin_to_unlock">Enter PIN to unlock</string>
    <string name="lockpassword_pin_too_short">PIN must contain at least %d numbers</string>
    <string name="lockpassword_pin_too_long">PIN must contain no more than %d numbers</string>
    <string name="lockpassword_pin_contains_non_digits">PIN must only contain numbers 0-9</string>
    <string name="lockpassword_press_continue">Press Continue when finished</string>
    <string name="done">Done</string>
    <string name="search_hint">Search location</string>
    <string name="error_network_not_available">Network not available. Grey screen inserted</string>
    <string name="sync">Sync</string>
    <string name="print">Print</string>
    <string name="set_as">Set as</string>
    <string name="sync_all">Sync all</string>
    <string name="memo_num">(%02d)</string>
    <string name="deleted_memo">Delete memo(%d)</string>
    <string name="select_all">Select all</string>
    <string name="this_memo_will_be_deleted">This memo will be deleted</string>
    <string name="n_memos_will_be_deleted">%d memos will be deleted</string>
    <string name="all_memos_will_be_deleted">All memos will be deleted</string>
    <string name="this_folder_will_be_deleted">This folder will be deleted</string>
    <string name="n_folders_will_be_deleted">%d folderes will be deleted</string>
    <string name="all_folders_will_be_deleted">All folders will be deleted</string>
    <string name="this_pile_will_be_deleted">This memo stack will be deleted</string>
    <string name="n_piles_will_be_deleted">%d memo stacks will be deleted</string>
    <string name="all_piles_will_be_deleted">All memo stacks will be deleted</string>
    <string name="search">Search</string>
    <string name="no_title">No title</string>
    <string name="no_tag">No tag</string>
    <string name="share_via">Share via</string>
    <string name="export">Export</string>
    <string name="to_gallery">To Gallery</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="export_to_gallery">Export to Gallery</string>
    <string name="create_folder">Create folder</string>
    <string name="link_to_calendar">Link to Calendar</string>
    <string name="sort_by">Sort by</string>
    <string name="date_most_recent">Date (Most recent)</string>
    <string name="date_oldest">Date (Oldest)</string>
    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="voice_contained">Containing voice</string>
    <string name="text_only">Text only</string>
    <string name="favourites">Favourites</string>
    <string name="view_by_list">View by list</string>
    <string name="view_by_thumbnail">View by thumbnail</string>
    <string name="edit">Edit</string>
    <string name="processing">Processing...</string>
    <string name="wait_dialog">Generating image...</string>
    <string name="share_fail">Sharing cancelled</string>
    <string name="setas_fail">SetAs cancelled</string>
    <string name="no_way_to_share">No applications to share picture</string>
    <string name="no_way_to_setas">No application available to set as the picture.</string>
    <string name="export_success">Export completed</string>
    <string name="export_fail">Export cancelled</string>
    <string name="print_fail">Failed to print</string>
    <string name="lock_success">Locked</string>
    <string name="unlock_success">Unlocked</string>
    <string name="lock_fail">Failed to lock</string>
    <string name="unlock_fail">Failed to unlock</string>
    <string name="google_docs">Google Docs</string>
    <string name="sync_msg">Sync your memos with Google Docs or transfer individual memos</string>
    <string name="google_account">Google account</string>
    <string name="last_sync">Last synced: %s</string>
    <string name="sync_now">Sync now</string>
    <string name="log_out">Log out</string>
    <string name="syncronized">Synchronised</string>
    <string name="memo_synchronization">Memo synchronisation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sync_folder">SAMSUNG_S MEMO</string>
    <string name="delete_message">This memo will be deleted</string>
    <string name="view_url">View URL</string>
    <string name="view">View</string>
    <string name="set_skin">Set skin</string>
    <string name="link_to_splanner">Link to S Planner</string>
    <string name="new_event">New event</string>
    <string name="new_task">New task</string>
    <string name="link">Link</string>
    <string name="S_Memo_Export">S Memo Export</string>
    <string name="add_picture">Add picture</string>
    <string name="picture">Picture</string>
    <string name="capture_picture">Take picture</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="from_clipboard">From clipboard</string>
    <string name="from_mini_penmemo">From S Memo lite memo</string>
    <string name="from_map">From Maps</string>
    <string name="open_url">Open URL</string>
    <string name="recognizing">Recognizing...</string>
    <string name="exceed_max_canvas_size">Maximum canvas size exceeded</string>
    <string name="clip_art_title">Select a clip art</string>
    <string name="pen_setting">Pen settings</string>
    <string name="pen_colors">Pen Colours</string>
    <string name="eraser">Eraser</string>
    <string name="clear_all">Clear All</string>
    <string name="clear">Clear</string>
    <string name="insert">Insert</string>
    <string name="recognize_to_text">Handwriting-to-text</string>
    <string name="add_title">Add title</string>
    <string name="delete_title">Delete title</string>
    <string name="add_tag">Add tag</string>
    <string name="edit_tag">Edit tag</string>
    <string name="change_background">Change background</string>
    <string name="splanner">S Planner</string>
    <string name="background">Background</string>
    <string name="select">Select</string>
    <string name="idea">Idea</string>
    <string name="todo">Todo</string>
    <string name="meeting">Meeting</string>
    <string name="mission">Mission</string>
    <string name="map_src_pos">Start point</string>
    <string name="map_dest_pos">End point</string>
    <string name="map_route">Directions</string>
    <string name="map_clear">Clear map</string>
    <string name="map_capture">Capture</string>
    <string name="map_data_error">Connect to Wi-Fi or data services to access maps</string>
    <string name="map_gps_error">GPS signal temporarily not available</string>
    <string name="map_pos_error">Wrong position</string>
    <string name="map_route_error">Unable to find directions</string>
    <string name="map_search_error">"Your address doesn't exist."</string>
    <string name="map_search_not_response">No response from server</string>
    <string name="map_search_not_result">No results found</string>
    <string name="cannot_creaet_image">Cannot to create capture image file.</string>
    <string name="mini_app_name">S Memo lite memo</string>
    <string name="this_item_will_be_deleted">This item will be deleted</string>
    <string name="to_penmemo">To pen memo</string>
    <string name="text_memo_first">Text first</string>
    <string name="drawing_memo_first">Drawing first</string>
    <string name="color">Colour</string>
    <string name="retry">Retry</string>
    <string name="under_development">Under development</string>
    <string name="add">Add</string>
    <string name="syncronizing">Synchronising...</string>
    <string name="sync_desc">You can sync your memos with Google Docs or transfer individual memos to it</string>
    <string name="sync_id">ID</string>
    <string name="upload_message">Upload memo to Google Docs</string>
    <string name="sync_password">Password</string>
    <string name="sync_loginfail">Log-in failed</string>
    <string name="sync_login">Login</string>
    <string name="network_connection_unavailable">Network connection not available</string>
    <string name="signing">Signing in...</string>
    <string name="check_id_n_password">Enter ID and password</string>
    <string name="sync_not_logged_in">Not logged in</string>
    <string name="sync_logout">Log out</string>
    <string name="sycnronizing">Synchronising...</string>
    <string name="sync_last">Last sync</string>
    <string name="sync_last_no_data">No data</string>
    <string name="sync_google_account">Google account</string>
    <string name="sync_fail">Sync failed</string>
    <string name="sync_suc">Sync Success</string>
    <string name="duplicatetag">Duplicate tag</string>
    <string name="unusabletag">Unusable tag</string>
    <string name="voiceerror_audio">Recording error</string>
    <string name="voiceerror_client">Application error</string>
    <string name="voiceerror_insufficent_permissions">Application does not have necessary permissions</string>
    <string name="voiceerror_network">Other network related errors.</string>
    <string name="voiceerror_network_timeout">Network operation timed out.</string>
    <string name="voiceerror_no_match">No recognition result matched.</string>
    <string name="voiceerror_recognizer_busy">Recognition service busy</string>
    <string name="voiceerror_server">Server error</string>
    <string name="voiceerror_speech_timeout">No speech input.</string>
    <string name="dictation_area">Dictation Area</string>
    <string name="pinlock">PIN lock</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_tap_1">Two tap</string>
    <string name="rename">Rename</string>
    <string name="reorder">Reorder</string>
    <string name="settings">Settings</string>
    <string name="copy">Copy</string>
</resources>