<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/drawable_ic_menu_search" android:id="@id/menu_search" android:title="@string/search" />
    <item android:icon="@drawable/drawable_ic_menu_delete" android:id="@id/menu_delete" android:title="@string/delete" />
    <item android:icon="@drawable/drawable_ic_menu_sort_by" android:id="@id/menu_sortby" android:title="@string/sort_by" />
    <item android:id="@id/menu_viewby" android:title="@string/view_by_list" />
    <item android:icon="@drawable/drawable_ic_menu_sharevia" android:id="@id/menu_sharevia" android:title="@string/share_via" />
    <item android:icon="@drawable/drawable_ic_menu_export" android:id="@id/menu_export" android:title="@string/export" />
    <item android:icon="@drawable/drawable_ic_menu_upload" android:id="@id/menu_sync" android:title="@string/sync" />
    <item android:icon="@drawable/drawable_ic_menu_add_folder" android:id="@id/menu_create_folder" android:title="@string/create_folder" />
    <item android:icon="@drawable/ic_menu_rename" android:id="@id/menu_rename" android:title="@string/rename" />
    <item android:icon="@drawable/ic_menu_reorder" android:id="@id/menu_reorder" android:title="@string/reorder" />
    <item android:icon="@drawable/drawable_ic_menu_move" android:id="@id/menu_move" android:title="@string/move" />
    <item android:icon="@drawable/drawable_ic_menu_copy" android:id="@id/menu_copy" android:title="@string/copy" />
    <item android:icon="@drawable/drawable_ic_menu_lock" android:id="@id/menu_lock" android:title="@string/lock" />
    <item android:icon="@drawable/drawable_ic_menu_unlock" android:id="@id/menu_unlock" android:title="@string/unlock" />
    <item android:icon="@drawable/drawable_ic_menu_print" android:id="@id/menu_print" android:title="@string/print" />
    <item android:icon="@drawable/ic_menu_settings" android:id="@id/menu_settings" android:title="@string/settings" />
    <item android:icon="@drawable/ic_menu_tutorial" android:id="@id/menu_tutorial" android:title="@string/tutorial" />
</menu>